[tool.poetry]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = ["司芳源 <sify1221@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
